--- a/Code/LDA Topic Modelling.ipynb
+++ b/Code/LDA Topic Modelling.ipynb
@@ -22,15 +22,29 @@
     "import pyLDAvis.gensim\n",
     "from gensim.models import CoherenceModel\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
     "import helper_functions as hf\n",
     "from hyperopt import fmin, tpe, hp, STATUS_OK, Trials, rand\n",
-    "import time\n",
-    "\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nlp = spacy.load('en_core_web_sm')\n",
-    "\n",
-    "lemmatizer=WordNetLemmatizer()\n",
-    "\n",
+    "lemmatizer=WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### Load updated stop words list\n",
     "stop_words = pd.read_csv(r'..\\Data\\stop_words.csv')\n",
     "stop_words = set(stop_words['stop_words']) \n",
@@ -40,45 +54,11 @@
     "station = re.compile('|'.join(map(re.escape, station_names['Station'].str.lower())))\n",
     "\n",
     "photo_names = ['svg','png','jpeg','jpg', 'photo','pictures','picture','photos']\n",
-    "photo = re.compile('|'.join(map(re.escape, photo_names)))         "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['title', 'score', 'id', 'url', 'comms_num', 'created', 'body'], dtype='object')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reddit_df = pd.read_csv(r'..\\Data\\reddit_data_raw.csv')\n",
-    "reddit_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "reddit data : 35085\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"reddit data :\", reddit_df.shape[0])"
+    "photo = re.compile('|'.join(map(re.escape, photo_names)))   \n",
+    "\n",
+    "### Load mallet package\n",
+    "os.environ['MALLET_HOME'] = r'..\\\\Models\\\\mallet-2.0.8' # update this path\n",
+    "mallet_path = r'..\\\\Models\\\\mallet-2.0.8\\\\bin\\\\mallet' # update this path"
    ]
   },
   {
@@ -87,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_fraction=0.4\n",
-    "reddit_df=reddit_df.sample(frac=working_fraction)"
+    "reddit_df = pd.read_csv(r'..\\Data\\reddit_data_raw.csv')"
    ]
   },
   {
@@ -100,11 +79,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "reddit data : 35085\n",
       "reddit data : 14034\n"
      ]
     }
    ],
    "source": [
+    "print(\"reddit data :\", reddit_df.shape[0])\n",
+    "working_fraction=0.4\n",
+    "reddit_df=reddit_df.sample(frac=working_fraction)\n",
     "print(\"reddit data :\", reddit_df.shape[0])"
    ]
   },
@@ -126,21 +109,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14034 tokenized in 126.67205238342285 sec with 8 threads\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
-    "\n",
     "processed_list=mp_instance.excecute()\n",
-    "\n",
     "end_time = time.time() - start_time\n",
     "print(\"{0} tokenized in {1} sec with {2} threads\".format(reddit_df.shape[0], end_time, jobs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,70 +149,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [2:21:51<00:00, 79.72s/it, best loss: -0.5211239729933473]  \n"
+     ]
+    }
+   ],
    "source": [
-    "def compute_coherence_values(parameters,dictionary, corpus, texts):\n",
-    "    \n",
-    "    global best_score\n",
-    "    global best_model\n",
-    "    \n",
-    "    parameters['num_topics']=int(parameters['num_topics'])\n",
-    "    parameters['passes']=int(parameters['passes'])\n",
-    "    \n",
-    "    model = gensim.models.ldamodel.LdaModel(corpus=corpus, id2word=dictionary, random_state=400, **parameters)\n",
-    "    coherencemodel = CoherenceModel(model=model, texts=texts, dictionary=dictionary, coherence='c_v')\n",
-    "    coherence_score=coherencemodel.get_coherence()\n",
-    "    \n",
-    "    if coherence_score > best_score:\n",
-    "        best_model=model\n",
-    "        best_score=coherence_score\n",
-    "\n",
-    "    return coherence_score\n",
-    "\n",
-    "def bayesian_optimizer(parameters, dictionary, corpus, texts):\n",
-    "    global best_score\n",
-    "    coherence_values = -compute_coherence_values(parameters, dictionary, corpus, texts)\n",
-    "    if -coherence_values > best_score:\n",
-    "        best_score = -coherence_values\n",
-    "    return {'loss': coherence_values, 'status': STATUS_OK}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 'distributed': hp.choice('distributed', [True, False])\n",
-    "# 'chunksize': hp.quniform('chunksize', 10000, 5000, 100000)\n",
-    "# 'gamma_threshold':hp.loguniform('gamma_threshold', -3, 2),\n",
-    "# 'minimum_phi_value':hp.loguniform('minimum_phi_value', -3, 2),\n",
-    "\n",
-    "trials = Trials()\n",
+    "model_name=\"ldamallet\" #\"ldamodel\"\n",
     "max_evals=100\n",
-    "\n",
-    "best_score=0\n",
-    "best_model=0\n",
-    "\n",
-    "parameters ={'num_topics':hp.quniform('num_topics', 1, 50, 1),\n",
-    "             'passes': hp.quniform('passes', 3, 30, 1),\n",
-    "             'decay':hp.uniform('decay', 0.5, 1),\n",
-    "             'alpha': hp.choice('alpha', [\"asymmetric\", \"auto\"])\n",
-    "            }\n",
-    "best = fmin(lambda x: bayesian_optimizer(parameters=x,dictionary=dictionary, corpus=corpus, texts=text_data), \n",
-    "            parameters, \n",
-    "            algo=tpe.suggest, \n",
-    "            max_evals=max_evals, \n",
-    "            trials=trials)"
+    "gensim_optimizer=hf.gensim_optimizer(model_name=\"ldamallet\", \n",
+    "                                     model_path=mallet_path,\n",
+    "                                     dictionary=dictionary, \n",
+    "                                     corpus=corpus, \n",
+    "                                     texts=text_data, \n",
+    "                                     max_evals=max_evals)\n",
+    "trials, best_model, best_score= gensim_optimizer.exceute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>num_topics</th>\n",
+       "      <th>topic_threshold</th>\n",
+       "      <th>loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>76.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.356735</td>\n",
+       "      <td>-0.521124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>80.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.619201</td>\n",
+       "      <td>-0.515409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.727374</td>\n",
+       "      <td>-0.511046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.457233</td>\n",
+       "      <td>-0.508285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>123.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.830517</td>\n",
+       "      <td>-0.503549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>117.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.731032</td>\n",
+       "      <td>-0.500623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.768000</td>\n",
+       "      <td>-0.500333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.282597</td>\n",
+       "      <td>-0.498431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>58.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.673723</td>\n",
+       "      <td>-0.496219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.376585</td>\n",
+       "      <td>-0.494042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    alpha  num_topics  topic_threshold      loss\n",
+       "21   76.0        12.0         0.356735 -0.521124\n",
+       "70   80.0        11.0         0.619201 -0.515409\n",
+       "12   16.0         9.0         0.727374 -0.511046\n",
+       "34   55.0        17.0         0.457233 -0.508285\n",
+       "99  123.0        10.0         0.830517 -0.503549\n",
+       "73  117.0         5.0         0.731032 -0.500623\n",
+       "57   23.0        13.0         0.768000 -0.500333\n",
+       "11   28.0         5.0         0.282597 -0.498431\n",
+       "61   58.0         5.0         0.673723 -0.496219\n",
+       "66   74.0        17.0         0.376585 -0.494042"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "losses = [trials.trials[i]['result']['loss'] for i in range(len(trials.trials))]\n",
     "params = pd.DataFrame(trials.vals)\n",
@@ -234,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,11 +317,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, '0.077*\"people\" + 0.028*\"happen\" + 0.023*\"start\" + 0.020*\"feel\" + 0.016*\"fuck\"')\n",
+      "(1, '0.068*\"work\" + 0.024*\"job\" + 0.022*\"give\" + 0.018*\"call\" + 0.016*\"life\"')\n",
+      "(2, '0.065*\"car\" + 0.054*\"stop\" + 0.045*\"drive\" + 0.030*\"streetcar\" + 0.027*\"driver\"')\n",
+      "(3, '0.055*\"presto\" + 0.043*\"fare\" + 0.037*\"card\" + 0.033*\"system\" + 0.023*\"pass\"')\n",
+      "(4, '0.082*\"people\" + 0.078*\"pay\" + 0.046*\"cost\" + 0.043*\"money\" + 0.028*\"increase\"')\n",
+      "(5, '0.036*\"government\" + 0.027*\"ontario\" + 0.023*\"province\" + 0.022*\"cut\" + 0.020*\"fund\"')\n",
+      "(6, '0.053*\"live\" + 0.042*\"build\" + 0.038*\"area\" + 0.033*\"place\" + 0.030*\"downtown\"')\n",
+      "(7, '0.064*\"urllink\" + 0.044*\"plan\" + 0.034*\"ford\" + 0.014*\"vote\" + 0.012*\"free\"')\n",
+      "(8, '0.208*\"transit\" + 0.114*\"city\" + 0.098*\"toronto\" + 0.050*\"public\" + 0.033*\"system\"')\n",
+      "(9, '0.182*\"ttc\" + 0.086*\"bus\" + 0.041*\"hour\" + 0.035*\"service\" + 0.030*\"run\"')\n",
+      "(10, '0.032*\"point\" + 0.027*\"find\" + 0.017*\"issue\" + 0.014*\"case\" + 0.013*\"number\"')\n",
+      "(11, '0.253*\"ttcstation\" + 0.134*\"subway\" + 0.061*\"train\" + 0.020*\"exist\" + 0.020*\"lrt\"')\n"
+     ]
+    }
+   ],
    "source": [
     "topics = best_model.print_topics(num_words=5)\n",
     "for topic in topics:\n",
