--- a/Counter.ipynb
+++ b/Counter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "46      79 Billy Bishop Way  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "38                             The Palms Jerk & Grill"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
        "46      79 Billy Bishop Way  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
        "38                             the palms jerk & grill"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,7 +1471,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class filter in module builtins:\n",
+      "\n",
+      "class filter(object)\n",
+      " |  filter(function or None, iterable) --> filter object\n",
+      " |  \n",
+      " |  Return an iterator yielding those items of iterable for which function(item)\n",
+      " |  is true. If function is None, return the items that are true.\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __next__(self, /)\n",
+      " |      Implement next(self).\n",
+      " |  \n",
+      " |  __reduce__(...)\n",
+      " |      Return state information for pickling.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'size' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-e9ce1147eea8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msize\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'size' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,21 +1546,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-25-688e9ffd4b1b>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-25-688e9ffd4b1b>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    restaurantdic[title](df2.size) = df2.filter(title)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m can't assign to function call\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pandas\n",
+    "for title in ylist:\n",
+    "    df2.filter(title)\n",
+    "    restaurantdic[title](df2.size) = df2.filter(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### STOPS AT 1###\n",
     "for title in restaurantdic:    \n",
     "    #if title in blist:\n",
     "    if any(title in s for s in blist):\n",
     "        restaurantdic[title] += 1\n",
-    "        continue\n",
+    "        pass\n",
     "        #Does not appear to hit twice in the same loop: For example if tiger sugar appears once in reviews, and once in a feature article"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1637,7 @@
        " 'jollibee': 0}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,20 +1662,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "80"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Step 4: Print new csv with columns:\n",
     "#Restaurant names | category | Stars | Featured Article/Review Count | *Aggregated score* | Location\n",
@@ -1603,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,8 +1689,9 @@
     "df1=pd.read_csv('HotAndNew.csv')\n",
     "stars=df1[' stars'].tolist()\n",
     "#count is already 'mention'\n",
-    "#aggregated score\n",
-    "aggregate = [x + y for x, y in zip(stars, mentions)]\n",
+    "#aggregated score adjust weighting\n",
+    "weight = mentions*2\n",
+    "aggregate = [x + y for x, y in zip(stars, weight)]\n",
     "#Prepare lists - location\n",
     "df1=pd.read_csv('HotAndNew.csv')\n",
     "location=df1[' location'].tolist()\n"
@@ -1624,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,47 +1721,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# To Do's\n",
+    "# Tweaking To Do's\n",
     "# 1) Get more featured articles via selenium\n",
     "# 2) Figure out why counters stop at 1 hit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['348A Yonge Street', '709 Yonge Street', '3016B Bathurst Street', '235 Queen Street West', '580 Queen Street W', '482 Queen Street W', '469 Queen St W', '506 Yonge Street', '146 Sumach St', '669 Queen Street W', '669 Queen Street W', '596 Yonge street', '2 Queen St E', '887 Dundas Street West', '51 St Nicholas Street', '354 Queen Street W', '382 Yonge Street', '108 Dovercourt Rd', '25 Carlton Street', '141 Ossington Avenue', '150 Eglinton Avenue E', '770 Bay Street', '333 Spadina Avenue', '2-270 Spadina Avenue', '376 College Street', '1042 Queen Street E', '220 KING STREET WEST', '64 Edward St', '633 Bloor St W', '10 Willison Square', '26 Duncan Street', '135 Ossington Avenue', '832 Dundas Street W', '1090 Queen Street W', '157 Dundas St W', '40 Hayden Street', '113 Fort York Boulevard', '2109 1/2 Yonge Street', '1911 Queen Street E', '493A Dundas St W', '390 Queen Street West', '461 King Street W', '729 Queen Street E', '235 Augusta Avenue', '717 Bay St', '39 Baldwin Street', '79 Billy Bishop Way']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(location)"
    ]
