Update on distance calculation, GO stations added

--- a/Code/Counter.ipynb
+++ b/Code/Counter.ipynb
@@ -811,7 +811,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subway.to_csv(os.path.join(cwd, \"Data\", \"Torornto_Subway_Station_List.csv\"),index=False)"
+    "# subway.to_csv(os.path.join(cwd, \"Data\", \"Torornto_Subway_Station_List.csv\"),index=False)"
    ]
   },
   {
@@ -820,7 +820,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HotAndNew.to_csv(os.path.join(cwd, \"Data\", \"BlogTO_mentions.csv\"),index=False)"
+    "# HotAndNew.to_csv(os.path.join(cwd, \"Data\", \"BlogTO_mentions.csv\"),index=False)"
    ]
   }
  ],
